--- a/i3/config
+++ b/i3/config
@@ -204,8 +204,8 @@ bindsym $mod+Shift+j exec /opt/appimages/Joplin.AppImage
 #exec --no-startup-id clipit
 exec_always /usr/bin/dunst
 exec --no-startup-id /usr/bin/lxpolkit
-exec --no-startup-id xinput set-prop 13 331 1
-exec --no-startup-id xinput set-prop 13 311 1               
+exec_always --no-startup-id xinput set-prop 10 331 1
+exec_always --no-startup-id xinput set-prop 10 311 1            
 
 set $bg-color 	         #88c0d0
 set $inactive-bg-color   #2E3440
